[package]
name = "majin"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.6"
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }
tui-nodes = { version = "0.6", optional = true }
libm = "0.2.8"

[features]
default = []
debug = ["ratatui", "crossterm", "tui-nodes"]
